# sincmaths

./: .editorconfig  .gitmodules  CHANGELOG.md  CITATION.cff  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle  settings.gradle.kts  sincmathsmp.podspec  version_checks.sh
.github/workflows/: gradle-assemble-test.yml  pull-request-task.yml
doc/: index.md
doc/sincmaths-core/: package-list
doc/sincmaths-core/sincmaths/: as-sinc-matrix.md  index.md
doc/sincmaths-core/sincmaths.coefficients/: index.md
doc/sincmaths-core/sincmaths.sincmatrix/: acf.md  all.md  and.md  any.md  as-bool-array.md  as-int-array.md  as-row-vector.md  as-scalar.md  col-indices-range.md  col-indices.md  col-vector-of.md  conv.md  copy-of.md  cross.md  csvread.md  cumsum.md  description.md  diff-with-wavelet.md  diff.md  disp.md  div.md  dot.md  el-mul.md  equals-to.md  et.md  eul2rotm.md  filter.md  filtfilt.md  findpeaks.md  first.md  flip.md  from.md  get-col.md  get-cols.md  get-row.md  get-rows.md  get.md  greater-than.md  gt.md  index.md  (+42 more)
docs/: index.html  index.md  navigation.html
docs/scripts/: navigation-pane.json  pages.json  sourceset_dependencies.js
docs/sincmathsmp/: package-list
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
pages/: index.html
sincmathsmp/: SincMaths.podspec  build.gradle.kts  sincmathsmp.podspec
src/androidMain/: AndroidManifest.xml
src/cpp/: CMakeLists.txt
src/cpp/tinyexpr/: Makefile  tinyexpr-jni.cpp
src/cpp/wavelib/: Makefile  example_signal.txt  wavelib-jni.cpp  wavelib.c  wt_helpers_test.c
(+1144 files in other folders)
